--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
 </head>
-<body style="color: #f9fc89; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+<body>
     <div class="navbar"> <nav>
         <a href="homePage.html">Homepage</a>
         <a class="active" href="about.html"> About Me</a>
