--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,4 +14,63 @@
         <a class="active" href="Portfolio.html">Portfolio</a>
     </nav></div>
 </body>
+    <h1>These are the previous projects I have been involved in</h1> <br>
+    <section>
+        <h2 style="text-align: right; padding-right: 50px;"> My First Project</h2>
+        <img src="./pics/project1.jpg" style="width: 325px; height: 200px; float: left; padding: 0 24px 24px 100px;
+        padding-right: 50px;"
+        alt="My First Project">
+        <p style=" text-align: right; padding-left: 50%; padding-right: 50px;"> Nibh cras pulvinar mattis nunc sed blandit. Tellus 
+            in metus vulputate eu scelerisque felis imperdiet proin. Placerat duis 
+            ultricies lacus sed turpis tincidunt id aliquet risus. Blandit libero 
+            volutpat sed cras ornare arcu. Commodo ullamcorper a lacus vestibulum sed 
+            arcu non. 
+        </p>
+        <p style=" text-align: right; padding-left: 50%; padding-right: 50px;">Vitae aliquet nec ullamcorper sit 
+            amet risus nullam eget felis. Nulla aliquet enim tortor at auctor urna. Sociis
+            natoque penatibus et magnis dis parturient montes nascetur. Venenatis urna 
+            cursus eget nunc scelerisque viverra mauris. Urna duis convallis convallis 
+            tellus id interdum velit laoreet id. Non odio euismod lacinia at quis risus 
+            sed vulputate. 
+        </p> <br><br>
+    </section>
+
+    <section>
+        <h2 style="text-align: right; padding-right: 50px;"> My Second Project</h2>
+        <img src="./pics/project2.jpg" style="width: 225px; height: 250px; float: left; padding: 0 24px 24px 100px;
+        padding-right: 50px;"
+        alt="My Second Project">
+        <p style=" text-align: right; padding-left: 50%; padding-right: 50px;"> Nibh cras pulvinar mattis nunc sed blandit. Tellus 
+            in metus vulputate eu scelerisque felis imperdiet proin. Placerat duis 
+            ultricies lacus sed turpis tincidunt id aliquet risus. Blandit libero 
+            volutpat sed cras ornare arcu. Commodo ullamcorper a lacus vestibulum sed 
+            arcu non. 
+        </p>
+        <p style=" text-align: right; padding-left: 50%; padding-right: 50px;">Vitae aliquet nec ullamcorper sit 
+            amet risus nullam eget felis. Nulla aliquet enim tortor at auctor urna. Sociis
+            natoque penatibus et magnis dis parturient montes nascetur. Venenatis urna 
+            cursus eget nunc scelerisque viverra mauris. Urna duis convallis convallis 
+            tellus id interdum velit laoreet id. Non odio euismod lacinia at quis risus 
+            sed vulputate. 
+        </p> <br><br>
+
+    <section>
+        <h2 style="text-align: right; padding-right: 50px;"> My Third Project</h2>
+        <img src="./pics/project3.jpg" style="width: 325px; height: 200px; float: left; padding: 0 24px 24px 100px;
+        padding-right: 50px;"
+        alt="My Third Project">
+        <p style=" text-align: right; padding-left: 50%; padding-right: 50px;"> Nibh cras pulvinar mattis nunc sed blandit. Tellus 
+            in metus vulputate eu scelerisque felis imperdiet proin. Placerat duis 
+            ultricies lacus sed turpis tincidunt id aliquet risus. Blandit libero 
+            volutpat sed cras ornare arcu. Commodo ullamcorper a lacus vestibulum sed 
+            arcu non. 
+        </p>
+        <p style=" text-align: right; padding-left: 50%; padding-right: 50px;">Vitae aliquet nec ullamcorper sit 
+            amet risus nullam eget felis. Nulla aliquet enim tortor at auctor urna. Sociis
+            natoque penatibus et magnis dis parturient montes nascetur. Venenatis urna 
+            cursus eget nunc scelerisque viverra mauris. Urna duis convallis convallis 
+            tellus id interdum velit laoreet id. Non odio euismod lacinia at quis risus 
+            sed vulputate. 
+        </p> <br><br>
+    </section>
 </html>
