--- a/homePage.html
+++ b/homePage.html
@@ -16,14 +16,13 @@
         </nav>
     </div>
     
-    <div style="float: right; width: 50%; color: #f9fc89; font-family: 'Franklin Gothic Medium', 
-    'Arial Narrow', Arial, sans-serif; font-size: larger;">
+    <div style="float: right; width: 50%; font-size: larger;">
         <h1>Quick Learner, Curious, Life Enthusiast</h1>
         <p>After all these years I've lived, I'd like to say there is absolutely more out there. 
             <br>This is my journey to the endless, my destination will be contentment. 
             <br> Tag along.</p>
     </div>
-    <div style="color: #f9fc89; padding-top: 50%;">
+    <div style="padding-top: 50%;">
         <p> P.S. I do not have a professional photo, hence this page is lacking. <br>
         however, that is on the personal to-do list for this class &#128513 <br>
         To take a professional photo.</p>
