Updated a form onto the site

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,6 +12,7 @@
         <a  href="homePage.html">Homepage</a>
         <a href="about.html"> About Me</a>
         <a class="active" href="Portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </nav></div>
 </body>
     <h1>These are the previous projects I have been involved in</h1> <br>
