--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
         <a href="homePage.html">Homepage</a>
         <a class="active" href="about.html"> About Me</a>
         <a href="Portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </nav></div>
     <div>
         <h1> My passions center around how things work, video games, and music.</h1><br>
