--- a/homePage.html
+++ b/homePage.html
@@ -13,6 +13,7 @@
             <a class="active" href="homePage.html">Homepage</a>
             <a href="about.html"> About Me</a>
             <a href="Portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </div>
     
